--- a/html_advanced/11-styleguide.html
+++ b/html_advanced/11-styleguide.html
@@ -11,9 +11,7 @@
 </head>
 
 <body>
-    <header>
-        Header
-    </header>
+    <header></header>
     <main>
         <section>
             <header>
@@ -27,9 +25,7 @@
             <h6>Heading level 6</h6>
         </section>
     </main>
-    <footer>
-        Footer
-    </footer>
+    <footer></footer>
 </body>
 
 </html>
