--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -136,9 +136,9 @@
 </html>
 
 <!-- 
-Copy the contents of 12-index.html into 14-index.html
+Copy the contents of 14-index.html into 15-index.html
 
-In the very first <header>,
-
-before the nav, create a span with the text Techium
+Wrap the contents of the header element with a div
+Wrap the content of each section element within a div
+Finally, wrap the contents of the <footer> tag with a div
 -->
