--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -26,9 +26,9 @@
         </section>
         <section>
             <div>
-                <header></header>
-                <h2>Services</h2>
-                <p>We work with you</p>
+                <header>
+                    <h2>Services</h2>
+                    <p>We work with you</p>
                 </header>
                 <div>
                     <h3>Design & Concept</h3>
