update the title for each file about.html, latest_news.html and contact.html

--- a/html_advanced/contact.html
+++ b/html_advanced/contact.html
@@ -198,8 +198,6 @@
 </html>
 
 <!-- 
-Copy the content of 17-index.html into 18-index.html
-
-in the header, wrap the span with a link that redirects to the page at the root of your folder (/)
-wrap the link with a div
+Copy the content of 18-index.html into about.html, latest_news.html and contact.html
+change the title of contact.html to replace Homepage with Contact
 -->
