--- a/html_advanced/26-styleguide.html
+++ b/html_advanced/26-styleguide.html
@@ -52,14 +52,12 @@
                         <li>Felis enim feugiat dolore viverra.</li>
                     </ul>
                 </h3>
-                <h3>
-                    Ordered
-                    <ol>
-                        <li>Dolor pulvinar etiam magna etiam.</li>
-                        <li>Sagittis adipiscing lorem eleifend.</li>
-                        <li>Felis enim feugiat dolore viverra.</li>
-                    </ol>
-                </h3>
+                <h3>Ordered</h3>
+                <ol>
+                    <li>Dolor pulvinar etiam magna etiam.</li>
+                    <li>Sagittis adipiscing lorem eleifend.</li>
+                    <li>Felis enim feugiat dolore viverra.</li>
+                </ol>
                 <h3>Definition</h3>
 
                 <dl>
