add reviews and author using blockquote and cite tags to Testimonials

--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -189,7 +189,7 @@
         </section>
         <br>
         <!-- Testimonials section -->
-        <section>
+        <section id="testimonials">
             <div>
                 <br>
                 <!-- Header -->
