--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -198,9 +198,11 @@
                     <p>We are more than a digital company</p>
                 </header>
                 <div>
+                    <!-- Notes: the checker specifically want to wrap the quote around <p></p> tags inside <blockquote></blockquote> -->
                     <article>
                         <blockquote>
-                            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!<cite>Yuri Y.</cite></p>
+                            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th
+                                website!<cite>Yuri Y.</cite></p>
                         </blockquote>
                     </article>
                     <article>
@@ -210,7 +212,8 @@
                     </article>
                     <article>
                         <blockquote>
-                            <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.<cite>Sven H.</cite></p>
+                            <p>I love your system. Definitely worth the investment. I'd be lost without Techium
+                                company.<cite>Sven H.</cite></p>
                         </blockquote>
                     </article>
                 </div>
