add video to Video section

--- a/html_advanced/38-styleguide.html
+++ b/html_advanced/38-styleguide.html
@@ -204,5 +204,4 @@ Copy the content of 34-styleguide.html into 38-styleguide.html
             add controls to the video
             ensure that the video does a loop
             display https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg when the video is downloading
-            provide an alternative text: Sorry, your browser doesn't support HTML5 videoPellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
--->
+            provide an alternative text: Sorry, your browser doesn't support HTML5 video
